# rolloffrates

./: DEPLOYMENT.md  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: dumpster_data.py
backend/app/scrapers/: base_scraper.py  budget_dumpster_scraper.py  liberty_dumpsters_scraper.py  waste_management_scraper.py
backend/app/scrapers/junk-king-scraper/: FINAL_SUMMARY.md  README_JUNK_KING.md  analyze_test_results.py  fixed_scraper.py  improved_regional_scraper.py  install.sh  requirements.txt  run_regional_scraper.py
backend/app/utils/: data_storage.py  scheduler.py
backend/data/: dumpster_data.json
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/: CityPage.tsx  CitySelector.tsx  DumpsterCards.tsx
junk_king_scraper/: .gitignore  README.md  check_data.py  data_processor.py  main.py  requirements.txt  run_test.sh  scraper.py  test_scraper.py
junk_king_scraper/data/: cities.csv
junk_king_scraper/utils/: email_notifier.py  logger.py
scraper/: .gitignore  README.md  browser_scraper.py  debug_scraper.py  dumpster_prices.csv  dumpster_prices_final.csv  dumpster_scraper.py  dumpsters_scraper.py  final_dumpster_scraper.py  final_headless_scraper.py  final_scraper.py  headless_scraper.py  improved_scraper.py  playwright_scraper.py  requirements.txt  run_scraper.py  simple_browser_check.py  test_scraper.py  updated_scraper.py  visual_scraper.py
wordpress-plugin/rolloff-rates/: README.md  rolloff-rates.php
(+11 files in other folders)
